@@ -8,6 +8,9 @@ CHANGELOG
 Release 1.6.0	[??? ??, 2009]
 
 Important API Changes:
+	Module name was renamed to pygraph;
+	python_graph_exception was renamed to GraphError;
+	Exception unreachable was renamed to NodeUnreachable;
 	get_edge_weight was renamed to edge_weight;
 	get_edge_label was renamed to edge_label;
 	get_edge_attributes was renamed to edge_attributes;
